# Neurogram

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
examples/: chatbot_memory.py  compare_memory.py  multi_agent.py  quickstart.py
neurogram/: __init__.py  agent.py  cli.py  consolidation_engine.py  embedding_engine.py  episodic_memory.py  importance_engine.py  memory_manager.py  neurogram.py  procedural_memory.py  semantic_memory.py  types.py
neurogram-js/: package-lock.json  package.json  tsconfig.json
neurogram-js/src/: index.ts
neurogram/dashboard/: __init__.py  server.py
neurogram/integrations/: __init__.py  langchain.py
neurogram/storage/: __init__.py  base.py  sqlite_backend.py
server/: app.py
tests/: test_agent.py  test_embedding.py  test_importance.py  test_storage.py
